<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/bookings" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
